Added gpay button script file

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -38,5 +38,10 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" 
       crossorigin="anonymous">
   </script>
+  <script
+    async
+    src="https://pay.google.com/gp/p/js/pay.js"
+    onload="console.log('TODO: add onload function')">
+</script>
   </body>
 </html>
