Fixed Cart and implemented create order

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -41,7 +41,7 @@
   <script
     async
     src="https://pay.google.com/gp/p/js/pay.js"
-    onload="console.log('TODO: add onload function')">
+    onload="console.log('Google Pay.JS Loaded')">
 </script>
   </body>
 </html>
